Add settings page HTML

--- a/liquid-prep-app/src/app/components/settings/settings.component.html
+++ b/liquid-prep-app/src/app/components/settings/settings.component.html
@@ -8,3 +8,64 @@
       <mat-icon>volume_up</mat-icon>
     </button>
   </mat-toolbar>
+
+  <mat-list class="menu-list">
+    <h3 class="menu-list-header" matSubheader>Account Settings</h3>
+   <mat-list-item>
+    <a mat-list-item href="#user-profile">
+      <mat-icon class="menu-list-profile-icon" mat-list-icon>person_outline_24px</mat-icon>
+      <p mat-line class="menu-list-body">Liquid Prep User</p>
+      <mat-icon class="menu-list-icon" mat-list-icon>navigate_next</mat-icon>
+      <span mat-line>liquidprep@farmer.com</span>
+    </a>
+   </mat-list-item>
+   <mat-divider></mat-divider>
+  </mat-list>
+
+  <mat-list class="menu-list">
+    <h3 class="menu-list-header" matSubheader>App Settings</h3>
+    <mat-list-item>
+      <a class="menu-list" mat-list-item href="#location">
+        <h4 mat-line class="menu-list-title">Location</h4>
+        <p mat-line class="menu-list-body">Ottawa, Ontario</p>
+        <mat-icon class="menu-list-icon icon-in-menu" mat-list-icon>navigate_next</mat-icon>
+      </a>
+   </mat-list-item>
+   <mat-list-item>
+    <a mat-list-item href="#temperature">
+      <h4 mat-line class="menu-list-title">Temperature</h4>
+      <p mat-line class="menu-list-body">Celsius</p>
+      <mat-icon class="menu-list-icon icon-in-menu" mat-list-icon>navigate_next</mat-icon>
+    </a>
+   </mat-list-item>
+   <mat-list-item>
+    <a mat-list-item href="#language">
+      <h4 mat-line class="menu-list-title">Language</h4>
+      <p mat-line class="menu-list-body">English</p>
+      <mat-icon class="menu-list-icon icon-in-menu" mat-list-icon>navigate_next</mat-icon>
+    </a>
+   </mat-list-item>
+   <mat-divider></mat-divider>
+  </mat-list>
+
+  <mat-list class="menu-list">
+    <h3 class="menu-list-header" matSubheader>Notifications</h3>
+    <mat-list-item>
+      <a class="menu-list" mat-list-item href="#soil-moisture">
+        <p mat-line class="menu-list-body">Soil Mosture Reading</p>
+        <mat-icon class="menu-list-icon icon-in-menu" mat-list-icon>navigate_next</mat-icon>
+      </a>
+   </mat-list-item>
+   <mat-list-item>
+    <a mat-list-item href="#crop-advice">
+      <p mat-line class="menu-list-body">Crop Advice</p>
+      <mat-icon class="menu-list-icon icon-in-menu" mat-list-icon>navigate_next</mat-icon>
+    </a>
+   </mat-list-item>
+   <mat-list-item>
+    <a mat-list-item href="#weather">
+      <p mat-line class="menu-list-body">Weather</p>
+      <mat-icon class="menu-list-icon icon-in-menu" mat-list-icon>navigate_next</mat-icon>
+    </a>
+   </mat-list-item>
+  </mat-list>
