--- a/liquid-prep-app/src/app/components/settings/settings.component.scss
+++ b/liquid-prep-app/src/app/components/settings/settings.component.scss
@@ -2,15 +2,57 @@
     background-color: rgba(0, 0, 255, 0.774);
     padding: 0 5px;
   }
-  
-  .toolbar-title {
-    color: #fff;
-  }
-  
-  .toolbar-spacer {
-    flex: 1 1 auto;
-  }
-  
-  .white-icon {
-    color: #fff;
-  }
+
+.toolbar-title {
+  color: #fff;
+}
+
+.toolbar-spacer {
+  flex: 1 1 auto;
+}
+
+.white-icon {
+  color: #fff;
+}
+
+.menu-list a {
+  text-decoration: none;
+}
+
+
+.menu-list-header {
+  font-weight: 500 !important;
+  font-size: 12px !important;
+  letter-spacing: 0.5px !important;
+  color: #2F4FFE;
+  height: 1em !important;
+  padding-bottom: 0;
+  margin-top: 0 !important;
+}
+
+.menu-list-title {
+  font-weight: 500 !important;
+  font-size: 12px !important;
+  letter-spacing: 0.5px !important;
+}
+
+.menu-list-body {
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  letter-spacing: 0.5px !important;
+}
+
+.menu-list-icon {
+  padding: 10px;
+  position: absolute;
+  right: 10px;
+}
+
+.menu-list-profile-icon {
+  margin-left: 10px;
+}
+
+:host ::ng-deep .mat-list-item-content {
+  padding: 0 !important;
+}
+
