Settings page HTML

--- a/liquid-prep-app/src/app/components/settings/settings.component.html
+++ b/liquid-prep-app/src/app/components/settings/settings.component.html
@@ -52,6 +52,12 @@
     <h3 class="menu-list-header" matSubheader>Notifications</h3>
     <mat-list-item>
       <a class="menu-list" mat-list-item href="#soil-moisture">
+        <p mat-line class="menu-list-notification">Push Notification</p>
+        <mat-slide-toggle class="notification-toggle"></mat-slide-toggle>
+      </a>
+   </mat-list-item>
+    <mat-list-item>
+      <a class="menu-list" mat-list-item href="#soil-moisture">
         <p mat-line class="menu-list-body">Soil Mosture Reading</p>
         <mat-icon class="menu-list-icon icon-in-menu" mat-list-icon>navigate_next</mat-icon>
       </a>
