--- a/liquid-prep-app/src/app/components/settings/settings.component.scss
+++ b/liquid-prep-app/src/app/components/settings/settings.component.scss
@@ -52,6 +52,14 @@
   margin-left: 10px;
 }
 
+.menu-list-notification {
+  margin-left: 15px !important;
+}
+
+.notification-toggle {
+  margin-right: 15px;
+}
+
 :host ::ng-deep .mat-list-item-content {
   padding: 0 !important;
 }
