--- a/liquid-prep-app/src/app/components/settings/settings.component.html
+++ b/liquid-prep-app/src/app/components/settings/settings.component.html
@@ -1,13 +1,5 @@
-<mat-toolbar class="custom-toolbar">
-    <button mat-icon-button class="white-icon" aria-label="back clicked" (click)="backClicked()">
-      <mat-icon class="volume-icon">arrow_back</mat-icon>
-    </button>
-    <span class="toolbar-title">Settings</span>
-    <span class="toolbar-spacer"></span>
-    <button mat-icon-button class="white-icon" aria-label="read text" (click)="volumeClicked()">
-      <mat-icon>volume_up</mat-icon>
-    </button>
-  </mat-toolbar>
+<app-header-title class="add-crop-header" fxFlexFill leftIconName="arrow_back" headerTitle="Settings" rightIconName="volume_up" (click)="onHeaderClick($event)">
+</app-header-title>
 
   <mat-list class="menu-list">
     <h3 class="menu-list-header" matSubheader>Account Settings</h3>
