updated precipitation unit

--- a/liquid-prep-app/src/app/components/dashboard/dashboard.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/dashboard.component.html
@@ -58,7 +58,7 @@
             >{{ loading ? "" : precipChance }}%</label
           >
           <label fxFlex="30">Precipitation</label>
-          <label class="value">{{ loading ? "" : precipitaion }} cm</label>
+          <label class="value">{{ loading ? "" : precipitaion }} mm</label>
         </div>
         <div fxFlexFill fxLayout="row">
           <label fxFlex="30">Humidity</label>
