--- a/liquid-prep-app/src/app/components/edit-crop/edit-crop.component.scss
+++ b/liquid-prep-app/src/app/components/edit-crop/edit-crop.component.scss
@@ -89,6 +89,26 @@
   }
 }
 
+::ng-deep.delete-crop-dialog {
+  .dialog-title {
+    font-weight: 500;
+    font-size: 20px;
+  }
+
+  p {
+    margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+.crop-image {
+  width: 330px;
+  height: 150px;
+  border-radius: 4px;
+  margin: 0 auto 15px;
+}
+
 .primary-button {
   background-color: #2F4FFE;
   border-radius: 4px;
@@ -103,6 +123,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  &.horizontal {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 .primary-button,
 .secondary-button {
@@ -110,9 +134,7 @@
   text-transform: uppercase;
 }
 
-.crop-image {
-  width: 330px;
-  height: 150px;
-  border-radius: 4px;
-  margin: 0 auto 15px;
+.disabled-button {
+  color: #aaa;
+  cursor: not-allowed;
 }
