--- a/liquid-prep-app/src/app/components/advice/advice.component.scss
+++ b/liquid-prep-app/src/app/components/advice/advice.component.scss
@@ -1,7 +1,59 @@
+.crop-container {
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.crop-status-container{
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+.advice-container{
+  margin-top: 8%;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.btn-container {
+  margin-top: 10%;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .custom-toolbar {
     background-color: rgba(0, 0, 255, 0.774);
     padding: 0 5px;
 }
+
+.soil-moisture-title{
+  margin-top: 4%;
+  color: white;
+  font-size: small;
+  text-align:center;
+}
+
+.soil-moisture-value{
+  margin-top: 28%;
+  color: white;
+  font-size: xx-large;
+  font-weight: bold;
+  text-align:center;
+}
+
+.soil-moisture-water{
+  margin-top: 2%;
+  color: black;
+  font-size: small;
+  text-align:center;
+}
+
+.soil-moisture-water-value{
+  margin-top: 4%;
+  color: black;
+  font-size: large;
+  font-weight: bold;
+  text-align:center;
+}
+
 
 .toolbar-title {
     color: #fff;
@@ -104,4 +156,8 @@
   font-size: x-large;
 }
 
-
+.btn-crop-status{
+  border-radius: 20px;
+  border-color: #899ae6;
+  font-size:12px;
+}
