--- a/liquid-prep-app/src/app/components/dashboard/dashboard.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="custom-toolbar">
+<!-- <mat-toolbar class="custom-toolbar">
   <div fxFlexFill fxLayout="row" fxLayoutAlign="start center">
     <button fxFlex="none" mat-icon-button class="white-icon" aria-label="menu">
       <mat-icon>menu</mat-icon>
@@ -13,7 +13,7 @@
       <mat-icon>volume_up</mat-icon>
     </button>
   </div>
-</mat-toolbar>
+</mat-toolbar> -->
 
 <div class="weather-margin">
   <div fxLayout="row" fxFlexFill>
