--- a/liquid-prep-app/src/app/components/seed-date/seed-date.component.html
+++ b/liquid-prep-app/src/app/components/seed-date/seed-date.component.html
@@ -1,8 +1,8 @@
 <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="25%">
 
 
-  <app-header-title fxFlexFill fxFlex="20" leftIconName="arrow_back" headerTitle="Select Seed Date" rightIconName="volume_up" (click)="onHeaderClick($event)">
-  </app-header-title> 
+  <!-- <app-header-title fxFlexFill fxFlex="20"  leftIconName="arrow_back" headerTitle="Select Seed Date"rightIconName="volume_up" (click)="onHeaderClick($event)">
+  </app-header-title>  -->
 
   <div fxFlexFill fxFlex="80" class="select-date-container">
     <img mat-card-image class="cardImg" src="/assets/select-seed.png" alt="select seed date" />
@@ -18,4 +18,4 @@
     <button mat-flat-button class="c-btn" (click)="clickConfirm(userSelectiondate)">CONFIRM</button>
   </div>
 
-</div> 
+</div>
