--- a/liquid-prep-app/src/app/components/header-title/header-title.component.html
+++ b/liquid-prep-app/src/app/components/header-title/header-title.component.html
@@ -1,11 +1,10 @@
 <mat-toolbar class="custom-toolbar">
-  <button mat-icon-button class="white-icon" aria-label="LeftButton" (click)="onClick('leftBtn')" >
-    <mat-icon>{{leftIconName}}</mat-icon>
+  <button mat-icon-button class="white-icon" aria-label="LeftButton" (click)="handleLeftBtnClick()">
+    <mat-icon>{{headerService.leftIconName}}</mat-icon>
   </button>
-  <span class="toolbar-title">{{headerTitle}}</span>
+  <span class="toolbar-title">{{headerService.headerTitle}}</span>
   <span class="toolbar-spacer"></span>
-  <button mat-icon-button class="white-icon" aria-label="RightButton" (click)="onClick('rightBtn')">
-    <mat-icon>{{rightIconName}}</mat-icon>
+  <button mat-icon-button class="white-icon" aria-label="RightButton" (click)="headerService.rightBtnClick()">
+    <mat-icon>{{headerService.rightIconName}}</mat-icon>
   </button>
 </mat-toolbar>
-    
