--- a/liquid-prep-app/src/app/components/header-title/header-title.component.scss
+++ b/liquid-prep-app/src/app/components/header-title/header-title.component.scss
@@ -1,7 +1,7 @@
 .custom-toolbar {
   background-color: #2F4FFE;
   padding: 0 5px;
-}  
+}
 
 .toolbar-title {
   color: #fff;
@@ -10,4 +10,10 @@
 
 .toolbar-spacer {
   flex: 1 1 auto;
-} 
+}
+
+:host ::ng-deep .toolbar-title {
+  padding-left: 0;
+  width: 100%;
+  text-align: center;
+}
