--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
@@ -1,4 +1,4 @@
-
+<!--
   <mat-toolbar class="custom-toolbar">
     <button mat-icon-button class="white-icon" aria-label="back clicked" (click)="backClicked()">
       <mat-icon class="volume-icon">arrow_back</mat-icon>
@@ -8,7 +8,7 @@
     <button mat-icon-button class="white-icon" aria-label="read text" (click)="volumeClicked()">
       <mat-icon>volume_up</mat-icon>
     </button>
-  </mat-toolbar>
+  </mat-toolbar> -->
 
   <div *ngIf="measureView=='before-measuring'" class="content-container" >
     <swiper *ngIf="measureView=='before-measuring'" #swiper class="swiper-container" [config]="config" [(index)]="curIndex" [disabled]="disabled"
