--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
@@ -41,7 +41,7 @@
               <button mat-icon-button>
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-icon-button [matMenuTriggerFor]="menu">
+              <button mat-icon-button (click)="openDeleteCropDialog(crop)">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
