--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
@@ -1,17 +1,9 @@
-<!--
-  <mat-toolbar class="custom-toolbar">
-    <button mat-icon-button class="white-icon" aria-label="back clicked" (click)="backClicked()">
-      <mat-icon class="volume-icon">arrow_back</mat-icon>
-    </button>
-    <span class="toolbar-title">Measure Soil Moisture</span>
-    <span class="toolbar-spacer"></span>
-    <button mat-icon-button class="white-icon" aria-label="read text" (click)="volumeClicked()">
-      <mat-icon>volume_up</mat-icon>
-    </button>
-  </mat-toolbar> -->
+
+<!--  <app-header-title fxFlexFill leftIconName="arrow_back" headerTitle="Measure soil moisture" rightIconName="volume_up" (click)="handleLeftClick($event)">-->
+<!-- *ngIf="measureView=='before-measuring'" </app-header-title>-->
 
   <div *ngIf="measureView=='before-measuring'" class="content-container" >
-    <swiper *ngIf="measureView=='before-measuring'" #swiper class="swiper-container" [config]="config" [(index)]="curIndex" [disabled]="disabled"
+    <swiper #swiper class="swiper-container" [config]="config" [(index)]="curIndex" [disabled]="disabled"
             (indexChange)="onIndexChange($event)" (swiperTransitionStart)="onSwiperEvent('transitionStart')"
             (swiperTransitionEnd)="onSwiperEvent('transitionEnd')">
 
@@ -29,7 +21,7 @@
             <div class="container" fxLayout="column" fxFlexFill fxLayoutAlign="end center" >
               <div class="container text-area"  fxLayout="column" fxFlexWrap fxLayoutAlign="start center" >
                 <p class="title" textWrap="true">Insert the sensor</p>
-                <p class="description">Make sure sensor is under the soil {{stage.rootDepth}} {{crop.cropGrowthStage.rootDepthMetric}}</p>
+                <p class="description">Make sure sensor is under the soil {{stage.rootDepthRange.minDepth}} to {{stage.rootDepthRange.maxDepth}} {{crop.facts.plantGrowthStages.rootDepthMetric}}</p>
               </div>
               <img mat-card-image class="cardImg" src="../../../assets/measure-guide/step-2-insert-the-sensor.png" alt="Step 2:">
             </div>
@@ -52,7 +44,6 @@
   <div *ngIf="measureView=='after-measuring' || measureView=='measuring'"
        fxLayout="column"
        fxLayoutAlign="none center">
-
       <div fxFlex="30" class="spin-margin-padding" >
         <mat-progress-spinner class="custom-spinner-sk" [mode]="measureView=='after-measuring'? 'determinate':'indeterminate'" diameter="150" strokeWidth="8" value=43 style="position:relative; top: 150px;z-index: 10;">
         </mat-progress-spinner>
