--- a/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
+++ b/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
@@ -1,3 +1,5 @@
+
+
 <div *ngIf="requestingCrop"
      fxFlexFill fxLayout="column"
      fxLayoutGap="25px"
@@ -47,7 +49,7 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-  <div *ngIf=!cropsList>
+  <div *ngIf="!cropsList || cropsList.length === 0 ">
       <mat-card>
         <img mat-card-image class="cardImage" src="{{ NO_NEW_CROPS }}" />
       </mat-card>
